# paft-train

./: .gitignore  README.md  main.py  mini_tars_env.py  paft.xml  paft_env.py  pyproject.toml  train_rl.py  train_sac.py  train_torchrl.py  yolo_e2e.py
tests/: test_gaits.py  test_physics.py
