[project]
name = "paft-train"
version = "0.1.0"
description = "PAFT robot locomotion training with PPO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium[mujoco,other]>=0.29.0",
    "torchrl>=0.4.0",
    "tensordict>=0.4.0",
    "wandb>=0.25.1",
    "weave>=0.52.36",
]
